<resources>
    <!-- App title -->
    <!-- TODO : Uncomment this app_name and remove the flavors app_name when app ready for release -->
    <!--<string name="app_name" translatable="false">Velocity Volume</string>-->
    <string name="nav_header_title" translatable="false">Velocity Volume</string>

    <!-- Side bar -->
    <string name="add_profile">Add Profile</string>
    <string name="settings">Settings</string>
    <string name="delete_profiles">Delete profiles</string>
    <string name="Add_profile_popup_title">Name of the new profile</string>
    <string name="Dialog_OK_label" translatable="false">OK</string>
    <string name="Dialog_cancel_label">Cancel</string>
    <string name="Delete_profile_popup_label">Choose profiles</string>
    <string name="Dialog_delete_label">Delete</string>

    <!-- Home Page -->
    <string name="create_a_profile">Create a profile</string>
    <string name="home_message_part_1">Welcome to</string>
    <string name="home_message_part_2" translatable="false">Velocity Volume</string>
    <string name="home_message_part_3">. \n\n This application is used to change the volume of your phone according to your driving speed. \n\n To use this application, you must first</string>
    <string name="home_message_part_4">create a profile</string>

    <!-- Volume Manager -->
    <string name="interval_1" translatable="false">0 – 20</string>
    <string name="interval_2" translatable="false">20 – 40</string>
    <string name="interval_3" translatable="false">40 – 60</string>
    <string name="interval_4" translatable="false">60 – 100</string>
    <string name="interval_5" translatable="false">> 100</string>
    <string name="percentage_1" translatable="false">100%</string>
    <string name="percentage_2" translatable="false">100%</string>
    <string name="percentage_3" translatable="false">100%</string>
    <string name="percentage_4" translatable="false">100%</string>
    <string name="percentage_5" translatable="false">100%</string>
    <string name="window_mode">Window open</string>
    <string name="current_gps_speed" translatable="false"> </string>
    <string name="current_gps_speed_prefix">Speed:</string>
    <string name="current_media_volume" translatable="false" />
    <string name="current_media_volume_prefix">Volume:</string>
    <string name="settingsActionBar">Settings</string>
    <string name="play_pause_button">Play/Pause button</string>

    <!-- Settings -->
    <string name="settings_scroll_contentDescription">Settings of Velocity Volume</string>
    <string name="general_settings">General settings</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string-array name="units_of_measurement">
        <item>@string/kilometers</item>
        <item>@string/miles</item>
    </string-array>
    <string name="night_mode">Night Mode</string>
    <string name="system">System</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string-array name="night_modes">
        <item>@string/system</item>
        <item>@string/on</item>
        <item>@string/off</item>
    </string-array>
    <string name="gps_car_speed_difference">GPS and car\'s reported speed difference</string>
    <string name="saving">Saving</string>
    <string name="import_data">Import data</string>
    <string name="data_import_successful">Data successfully imported</string>
    <string name="data_import_failed">ERROR : Couldn\'t import the data</string>
    <string name="export_data">Export data</string>
    <string name="data_export_successful">Data successfully exported</string>
    <string name="about">About</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="restart_needed">(Restart needed, click to restart)</string>
    <string name="update">Update</string>
    <string name="update_failed">The update has failed</string>
    <string name="update_restart_needed">(Download completed, click to restart)</string>

    <string name="Allow_GPS_error">Error, please accept geolocation</string>
    <string name="Allow_GPS_accept">You are now geolocated</string>
    <string name="Allow_GPS_unactivated">Please active geolocation on Android parameters</string>
    <string name="Profile_already_exist_part_1">A profile named</string>
    <string name="Profile_already_exist_part_3">already exist</string>

    <!-- Huawei App Gallery-->
    <string name="HMS_Not_Available">HMS not available</string>
    <string name="Phone_Brand_Is_Not_Huawei">You are not using a Huawei or Honor phone, please install other version</string>
    <string name="No_Updates_available">No updates available</string>
</resources>
