<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".ui.volumemanager.VolumeManagerFragment">

    <ScrollView
        android:id="@+id/Scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:foregroundGravity="center"
        android:padding="0dp">

        <LinearLayout
            android:id="@+id/fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">


            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/interval_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval_1"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/slider_1"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:progress="100"
                    android:progressBackgroundTint="?attr/colorPrimaryVariant"
                    android:progressBackgroundTintMode="src_over"
                    android:progressTint="?attr/colorPrimary"
                    android:thumbTint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/percentage_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/percentage_1"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/interval_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval_2"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/slider_2"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:progress="100"
                    android:progressBackgroundTint="?attr/colorPrimaryVariant"
                    android:progressBackgroundTintMode="src_over"
                    android:progressTint="?attr/colorPrimary"
                    android:thumbTint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/percentage_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/percentage_2"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/interval_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval_3"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/slider_3"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:progress="100"
                    android:progressBackgroundTint="?attr/colorPrimaryVariant"
                    android:progressBackgroundTintMode="src_over"
                    android:progressTint="?attr/colorPrimary"
                    android:thumbTint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/percentage_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/percentage_3"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/interval_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval_4"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/slider_4"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:progress="100"
                    android:progressBackgroundTint="?attr/colorPrimaryVariant"
                    android:progressBackgroundTintMode="src_over"
                    android:progressTint="?attr/colorPrimary"
                    android:thumbTint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/percentage_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/percentage_4"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/interval_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval_5"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/slider_5"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:progress="100"
                    android:progressBackgroundTint="?attr/colorPrimaryVariant"
                    android:progressBackgroundTintMode="src_over"
                    android:progressTint="?attr/colorPrimary"
                    android:thumbTint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/percentage_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/percentage_5"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchWindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:height="80dp"
                android:text="@string/window_mode"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:theme="@style/SwitchTheme"
                tools:checked="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimaryVariant"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_gps_speed"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_media_volume"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/getLocation"
            android:layout_width="52dp"
            android:layout_centerVertical="true"
            android:layout_height="52dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/fab_margin"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/play_pause_button"
            android:iconTint="@color/white"
            android:src="@android:drawable/ic_media_play"
            app:backgroundTint="#4000FF00"
            app:rippleColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>
